# jtec

./: .gitignore  README.md  flake.nix  pyproject.toml
src/jtec/: __init__.py
src/jtec/classes/: endpoint.py
src/jtec/commands/: gatus.py
src/jtec/commands/gatus/: endpoint.py  gatus.py
